# texterrors

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yaml
benchmarks/: alignment_benchmark.py
libs/: fast.cpp  pybind11  stringvector.cc  stringvector.h  texterrors_align.cc
tests/: conftest.py  hyptext  reftext  test_functions.py  texta  texta2  texta3  textb  textb2  textb3
textalign/: textalign.py  textb
texterrors/: __init__.py  alignment.py  summedcost  texterrors.py
texterrors/data/: wordlist
