[build-system]
requires = [
    "scikit-build-core>=0.11",
    "nanobind>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "texterrors"
version = "1.1.0"
description = "For WER"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0 License" }
authors = [
    { name = "Rudolf A Braun", email = "rab014@gmail.com" },
]
dependencies = [
    "Levenshtein",
    "loguru",
    "numpy",
    "plac",
    "regex",
    "termcolor",
]

[project.scripts]
texterrors = "texterrors.texterrors:cli"

[project.urls]
Homepage = "https://github.com/RuABraun/texterrors"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["texterrors"]

[tool.cibuildwheel]
build-verbosity = 1

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
